Better naming of Go packages

--- a/grpc-gateway-test-project/Makefile
+++ b/grpc-gateway-test-project/Makefile
@@ -2,14 +2,14 @@ generate:
 	protoc -I/usr/local/include -I. \
 	  -I${GOPATH}/src \
 	  -I${GOPATH}/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis \
-	  --go_out=plugins=grpc:pkg/example_service \
-	  --grpc-gateway_out=logtostderr=true:pkg/example_service \
+	  --go_out=plugins=grpc:pkg/example \
+	  --grpc-gateway_out=logtostderr=true:pkg/example \
 	  --swagger_out=logtostderr=true:docs/ \
 	  proto/example_service.proto
 	protoc -I/usr/local/include -I. \
 	  -I${GOPATH}/src \
 	  -I${GOPATH}/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis \
-	  --go_out=plugins=grpc:pkg/starwars_service \
-	  --grpc-gateway_out=logtostderr=true:pkg/starwars_service \
+	  --go_out=plugins=grpc:pkg/starwars \
+	  --grpc-gateway_out=logtostderr=true:pkg/starwars \
 	  --swagger_out=logtostderr=true:docs/ \
 	  proto/starwars_service.proto
